# PSCR

./: CMakeLists.txt  calculations.c  calculations.h  keyboard.c  keyboard.h  logger.c  logger.h  periodic.c  periodic.h  udp_client.c  udp_server_test.c  vizualization.py  water_power_plant.c
