cmake_minimum_required(VERSION 3.16)
project(PSCR VERSION 1.0.0)
add_executable(pscr water_power_plant.c periodic.c calculations.c keyboard.c logger.c)
add_executable(udp_client udp_client.c )
# add_executable(udp_server_test udp_server_test.c)
target_link_libraries(pscr pthread rt)
target_link_libraries(udp_client pthread rt)
set(CMAKE_BUILD_TYPE Debug)